--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,16 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.24.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "bootstrap": "4.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.1",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
